--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
 gower = "^0.1.2"
 pyyaml = "^6.0"
-torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+torch = "^2.1.2"
 opacus = "^1.4.0"
 networkx = "^3.1"
 pyvis = "^0.3.2"
@@ -72,7 +72,7 @@ mkdocs-git-revision-date-localized-plugin = "^1.2.0"
 pymdown-extensions = "^10.0.1"
 
 [tool.poetry.group.security.dependencies]
-pillow = "^10.0.1"
+pillow = "^10.2.0"
 urllib3 = "^2.0.7"
 
 [tool.black]
